--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,174 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body,
+input,
+input::placeholder {
+  font-family: "Catamaran", sans-serif;
+  color: #803434;
+}
+
+button {
+  font-family: inherit;
+  font-size: 18px;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+li {
+  margin: 10px 0;
+}
+
+input,
+li {
+  letter-spacing: 1px;
+  font-size: 18px;
+}
+
+h1,
+h2 {
+  letter-spacing: 10px;
+}
+
+/* Buttons */
+.btnAdd,
+.btnCheck,
+.btnEdit,
+.btnDelete {
+  background-color: #803434;
+  border: 2px solid #803434;
+  padding: 8px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 0 white;
+  color: #f6d6d6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  user-select: none;
+}
+
+.btnAdd:hover {
+  background-color: transparent;
+  color: #803434;
+}
+
+.btnCheck {
+  background-color: #10b581;
+  border: 2px solid #10b581;
+  padding: 5px;
+  font-size: 14px;
+}
+
+.btnCheck:hover {
+  background-color: transparent;
+  color: #10b581;
+}
+
+.btnEdit {
+  position: relative;
+  background-color: #3b82f6;
+  border: 2px solid #3b82f6;
+  padding: 5px;
+  font-size: 14px;
+}
+
+.btnEdit:hover {
+  background-color: transparent;
+  color: #3b82f6;
+}
+
+.btnDelete {
+  background-color: #ef4444;
+  border: 2px solid #ef4444;
+  padding: 5px;
+  font-size: 14px;
+}
+
+.btnDelete:hover {
+  background-color: transparent;
+  color: #ef4444;
+}
+/* End of buttons */
+
+.heading img {
+  width: 150px;
+}
+
+.container {
+  background-color: #f6d6d6;
+  min-height: 100vh;
+  padding: 10px 20px 80px;
+}
+
+.container h2 {
+  text-transform: uppercase;
+  text-align: center;
+  padding: 20px 50px;
+  font-weight: 800;
+  font-size: 46px;
+}
+
+.container-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.container-inner form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.container-inner form input {
+  padding: 10px;
+  width: 300px;
+  border: none;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 0 #803434;
+}
+
+.container-inner label {
+  font-size: 20px;
+}
+
+article {
+  width: 600px;
+}
+
+.article:nth-child(even) {
+  background-color: #f3c4c4;
+}
+
+.article {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10px;
+  border-radius: 5px;
+}
+
+.article ul {
+  width: 450px;
+  text-align: justify;
+}
+
+.article .article-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 110px;
+}
+
+h3 {
+  padding: 20px 0 0;
 }
